--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1058,6 +1058,9 @@ select {
 .bottom-1\/2 {
   bottom: 50%;
 }
+.-left-5 {
+  left: -1.25rem;
+}
 .z-0 {
   z-index: 0;
 }
@@ -1168,6 +1171,18 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
+.mt-16 {
+  margin-top: 4rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+.ml-5 {
+  margin-left: 1.25rem;
+}
 .block {
   display: block;
 }
@@ -1228,8 +1243,20 @@ select {
 .h-32 {
   height: 8rem;
 }
+.h-screen {
+  height: 100vh;
+}
+.h-\[30px\] {
+  height: 30px;
+}
+.h-14 {
+  height: 3.5rem;
+}
 .max-h-\[580px\] {
   max-height: 580px;
+}
+.max-h-\[50px\] {
+  max-height: 50px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1281,6 +1308,9 @@ select {
 }
 .w-32 {
   width: 8rem;
+}
+.w-14 {
+  width: 3.5rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1353,6 +1383,9 @@ select {
 .cursor-pointer {
   cursor: pointer;
 }
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
 .list-inside {
   list-style-position: inside;
 }
@@ -1364,6 +1397,9 @@ select {
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-row {
   flex-direction: row;
@@ -1440,6 +1476,11 @@ select {
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
+.space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1471,6 +1512,9 @@ select {
 }
 .rounded-2xl {
   border-radius: 1rem;
+}
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -1536,13 +1580,17 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
-.border-\[\#0D63F5\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(13 99 245 / var(--tw-border-opacity));
-}
 .border-\[\#d4d4d4\] {
   --tw-border-opacity: 1;
   border-color: rgb(212 212 212 / var(--tw-border-opacity));
+}
+.border-\[\#EDEDED\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(237 237 237 / var(--tw-border-opacity));
+}
+.border-\[\#0D63F5\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(13 99 245 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1608,6 +1656,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(249 251 252 / var(--tw-bg-opacity));
 }
+.bg-\[\#C0CADA\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(192 202 218 / var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1640,6 +1692,9 @@ select {
 }
 .p-6 {
   padding: 1.5rem;
+}
+.p-7 {
+  padding: 1.75rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1725,13 +1780,17 @@ select {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
 }
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.px-24 {
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -1765,6 +1824,15 @@ select {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pt-14 {
+  padding-top: 3.5rem;
+}
+.pb-20 {
+  padding-bottom: 5rem;
+}
+.pt-10 {
+  padding-top: 2.5rem;
 }
 .text-left {
   text-align: left;
@@ -1839,6 +1907,9 @@ select {
 }
 .leading-normal {
   line-height: 1.5;
+}
+.leading-loose {
+  line-height: 2;
 }
 .tracking-widest {
   letter-spacing: 0.1em;
@@ -1930,6 +2001,14 @@ select {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
+.text-\[\#2AB49B\] {
+  --tw-text-opacity: 1;
+  color: rgb(42 180 155 / var(--tw-text-opacity));
+}
+.text-\[\#808997\] {
+  --tw-text-opacity: 1;
+  color: rgb(128 137 151 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -1992,8 +2071,15 @@ select {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
 }
+.ring-\[\#0D63F3\] {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(13 99 243 / var(--tw-ring-opacity));
+}
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
+}
+.ring-offset-4 {
+  --tw-ring-offset-width: 4px;
 }
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2280,6 +2366,18 @@ select {
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
+.peer:checked ~ .peer-checked\:border-transparent {
+  border-color: transparent;
+}
+.peer:checked ~ .peer-checked\:ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.peer:checked ~ .peer-checked\:ring-\[\#0D63F3\] {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(13 99 243 / var(--tw-ring-opacity));
+}
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
@@ -2432,6 +2530,10 @@ select {
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .sm\:items-start {
@@ -2595,8 +2697,20 @@ select {
     grid-column: span 6 / span 6;
   }
 
+  .lg\:col-span-7 {
+    grid-column: span 7 / span 7;
+  }
+
+  .lg\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+
   .lg\:mt-16 {
     margin-top: 4rem;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
   }
 
   .lg\:ml-6 {
@@ -2605,10 +2719,6 @@ select {
 
   .lg\:ml-10 {
     margin-left: 2.5rem;
-  }
-
-  .lg\:mt-0 {
-    margin-top: 0px;
   }
 
   .lg\:block {
@@ -2627,12 +2737,16 @@ select {
     display: none;
   }
 
+  .lg\:h-\[30rem\] {
+    height: 30rem;
+  }
+
   .lg\:h-16 {
     height: 4rem;
   }
 
-  .lg\:h-\[30rem\] {
-    height: 30rem;
+  .lg\:min-h-screen {
+    min-height: 100vh;
   }
 
   .lg\:w-5\/12 {
@@ -2659,6 +2773,10 @@ select {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:items-center {
     align-items: center;
   }
@@ -2681,6 +2799,12 @@ select {
     margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .lg\:divide-x > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 0;
+    border-right-width: calc(1px * var(--tw-divide-x-reverse));
+    border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+  }
+
   .lg\:border-r {
     border-right-width: 1px;
   }
@@ -2700,14 +2824,48 @@ select {
     padding-bottom: 4rem;
   }
 
+  .lg\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
+  .lg\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .lg\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
   }
 
-  .lg\:py-24 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+  .lg\:px-\[91px\] {
+    padding-left: 91px;
+    padding-right: 91px;
+  }
+
+  .lg\:pt-20 {
+    padding-top: 5rem;
+  }
+
+  .lg\:pb-28 {
+    padding-bottom: 7rem;
+  }
+
+  .lg\:pl-8 {
+    padding-left: 2rem;
+  }
+
+  .lg\:pr-20 {
+    padding-right: 5rem;
+  }
+
+  .lg\:pl-20 {
+    padding-left: 5rem;
+  }
+
+  .lg\:pr-7 {
+    padding-right: 1.75rem;
   }
 }
 
